--- a/shop/templates/customer_product.html
+++ b/shop/templates/customer_product.html
@@ -45,16 +45,20 @@
     <th>Order</th>
     </thead>
   </tr>
-      {% for i in items %}
+  {% for i in items %}
   <tr>
 
     <td>{{i.name}}</td>
     <td>{{i.price}}</td> 
     <td>{{i.inventory}}</td>
     <td>{{i.seller.user}}</td>
-    <td><a href="{% url 'shop:order_details' i.slug %}" class="btn btn-success"">Order</a></td>
-     </tr>
-      {% endfor %}
+    {% if i.inventory > 0 %}
+      <td><a href="{% url 'shop:order_details' i.slug %}" class="btn btn-success"">Order</a></td>
+    {% else %}
+      <td><p class="text-danger">Out of Stock</p></td>
+    {% endif %}
+  </tr>
+  {% endfor %}
 
 </table> 
 </div>
